<resources>
    <string name="app_name">Libratica</string>
    <string name="Product_Picture">Click</string>
    <string name="Item_type">Item Type</string>
    <string name="Full_Name">Full Name</string>
    <string name="Email">Email</string>
    <string name="Location">Location</string>

    <string name="Uploading">Uploading...</string>
    <string name="title_activity_navigation_drawer">Navigation_drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="borrow">Borrow a Book</string>
    <string name="search">Search</string>
    <string name="borrowed">Borrowed Books</string>
    <string name="out">Log Out</string>
    <string name="Search_map">Search By Map</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_navigation_activity">Navigation_activity</string>
    <string name="title_activity_navigation_drawer_2">Navigation_drawer_2</string>
    <string name="title_activity_maps">Map</string>
    <string name="monk">Title : The Monk Who sold His Ferrari</string>
    <string name="alch">Title : The Alchemist</string>
    <string name="mock">Title : To Kill a MockingBird</string>
    <string name="five_am">Title : The 5am Club</string>
    <string name="zahir">Title : The Zahir</string>
    <string name="sun_1">Title : A Thousand Splendid Suns</string>
    <string name="runner">Title : The Kite Runner</string>

</resources>