<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".borrow_activity"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/borrow_image_1"
                android:layout_width="130dp"
                android:layout_height="120dp"
                android:padding="10dp"
                android:src="@drawable/the_monk"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title : The Monk Who sold His Ferrari "
                android:textColor="#000"
                android:textSize="24dp"

                />

            <RatingBar

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="4.5"
                android:stepSize="0.1"

                />

            </LinearLayout>







        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"

                android:padding="10dp"
                android:src="@drawable/the_alchemist"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/alch"
                    android:textColor="#000"
                    android:textSize="24dp"

                    />

                <RatingBar

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:rating="4"

                    />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"


                android:padding="10dp"
                android:src="@drawable/mockingbird"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mock"
                    android:textColor="#000"
                    android:textSize="24dp"

                    />

                <RatingBar

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:stepSize="0.1"
                    android:rating="4"

                    />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"


                android:padding="10dp"
                android:src="@drawable/the_zahir"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:text="@string/zahir"
                    android:textColor="#000"
                    android:textSize="24dp"

                    />

                <RatingBar

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:numStars="5"
                    android:rating="4"
                    android:stepSize="0.1"

                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"


                android:padding="10dp"
                android:src="@drawable/five"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/five_am"
                    android:textColor="#000"
                    android:textSize="24dp"

                    />

                <RatingBar

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="3.5"

                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"

                android:padding="10dp"
               android:src="@drawable/sun"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:text="@string/sun_1"
                    android:textColor="#000"
                    android:textSize="24dp"

                    />

                <RatingBar

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:rating="4.5"

                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="100dp"

                android:padding="10dp"
               android:src="@drawable/the_kite_runner"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   android:text="@string/runner"
                    android:textSize="24dp"
                    android:textColor="#000"

                    />

                <RatingBar

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:rating="4.5"

                    />

            </LinearLayout>


        </LinearLayout>





    </LinearLayout>





</ScrollView>



